- Made animations smoother and captured pieces now fade out of existence - Quickly scrolling through a game no longer breaks the board display - User is notified when all of their games have been fetched - Fetched games now display a turn indicator - Fixed annotations not being compatible with some browsers - Fixed rematch button being always visible after viewing a game - Some slight style changes

--- a/styles/game-elems.css
+++ b/styles/game-elems.css
@@ -1,3 +1,13 @@
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 .game > * {
     position: absolute;
     width: 12.5%;
@@ -38,12 +48,16 @@
     will-change: transform;
 
     transform: translate(0px, 0px);
-    transition: transform 0.1s ease-in-out;
+    transition: transform 300ms ease-in-out;
 
     left: 0px;
     top: 0px;
 
     z-index: 2;
+}
+
+.piece.captured {
+    animation: fadeOut 300ms 80ms forwards ease-in;
 }
 
 /* === Glyphs === */
